[project]
name = "jk-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyqt5>=5.15.11",
    "pyqtdarktheme>=2.1.0",
    "pyqtwebengine>=5.15.7",
]
[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5 <= 5.15.2",
    "pyqtwebengine-qt5 <= 5.15.2"
]
